# ParameterTuningForAdvCppEx3

./: CMakeLists.txt  README.md  algo_0_params.txt  algo_10_params.txt  algo_11_params.txt  algo_12_params.txt  algo_13_params.txt  algo_14_params.txt  algo_15_params.txt  algo_16_params.txt  algo_17_params.txt  algo_18_params.txt  algo_19_params.txt  algo_1_params.txt  algo_2_params.txt  algo_3_params.txt  algo_4_params.txt  algo_5_params.txt  algo_6_params.txt  algo_7_params.txt  algo_8_params.txt  algo_9_params.txt  algorithm.cpp  algorithm.h  optimize_parameters.py  p_algo.cpp  p_algo.h  scores.csv  summary.csv
algo_common/: AlgorithmRegistration.h  PathingGraph.cpp  PathingGraph.h  SmartAlgorithm.cpp  SmartAlgorithm.h  TileManager.cpp  TileManager.h
best_right_now/: algo_0_params.txt  algo_10_params.txt  algo_11_params.txt  algo_12_params.txt  algo_13_params.txt  algo_14_params.txt  algo_15_params.txt  algo_16_params.txt  algo_17_params.txt  algo_18_params.txt  algo_19_params.txt  algo_1_params.txt  algo_2_params.txt  algo_3_params.txt  algo_4_params.txt  algo_5_params.txt  algo_6_params.txt  algo_7_params.txt  algo_8_params.txt  algo_9_params.txt  best_algo.cpp  best_algo.h  scores.csv  summary.csv
common/: WallSensor.h
house_files/: dog_test001.house  dog_test002.house  dog_test003.house  house001.house  house002.house  house003.house  input_a001.house  input_a002.house  input_a003.house  input_b001.house  input_b002.house  input_c001.house  input_c002.house  input_d.house  input_e.house  input_f001.house  input_f002.house  input_f003.house  input_g001.house  input_g002.house  input_g003.house  input_h.house  provided_input.house
